# vacatio

./: .firebaserc  .gitignore  LICENSE  Podfile  README.md  Trips.storyboard  firebase.json  package-lock.json  package.json  pyproject.toml
Vacatio.xcodeproj/: project.pbxproj
Vacatio.xcodeproj/xcshareddata/xcschemes/: Vacatio (Production).xcscheme  (+2 more)
Vacatio.xcworkspace/: contents.xcworkspacedata
Vacatio/Configs/: Base.xcconfig  Development.xcconfig  Environment.swift  FirebaseConfig.swift  GoogleService-Info-Development.plist  GoogleService-Info-Staging.plist  GoogleService-Info.plist  Info.plist  Production.xcconfig  Staging.xcconfig
Vacatio/Controllers/: AddNewTripViewController.swift  ItemModelController.swift  TomTomAPIController.swift  TripDetailViewController.swift  TripModelController.swift
Vacatio/Development/: NetworkError.swift  VerificationCode.swift  VerificationCodeController.swift
Vacatio/Helpers/: AppConstants.swift  Constants.swift  Extensions.swift  NetworkError.swift
Vacatio/Models/: Config.swift  RecordProtocol.swift  User.swift
Vacatio/Resources/: AppDelegate.swift  SceneDelegate.swift  VacatioRelease-Development.entitlements  VacatioRelease-Production.entitlements  VacatioRelease-Staging.entitlements
Vacatio/ServicesAndManagers/: CloudKitService.swift  RecordManager.swift  StorageProtocol.swift
Vacatio/Vacatio.xcodeproj/: project.pbxproj
Vacatio/VacatioUITests/: VacatioUITests.swift
VacatioTests/: VacatioTests.swift
dev/notes/: agile-epics-overview.md
ops/notes/: 001-backwards-plan_epic-vacatio-hello-world.md  vacatio-SLAs.md
(+38 files in other folders)
