[tool.poetry]
name = "house-hunt.git"
version = "0.1.0"
description = "Tracks Python dependencies for a housing hunt iOS application (name tbd)."
authors = ["Stephen A. Davis <stephen@webdavis.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
grip = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
